--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,247 +1,222 @@
 :root {
-  --primary-color: #2c3e50;
-  --secondary-color: #ecf0f1;
-  --accent-color: #e74c3c;
-  --font-family: 'Roboto', sans-serif;
-}
-
-body {
-  margin: 0;
-  font-family: var(--font-family);
-  background-color: var(--secondary-color);
-  color: var(--primary-color);
-}
-
-.page {
-    background: linear-gradient(to bottom, #835941, #121212);
-    color: black;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    font-family: 'Arial', sans-serif;
-}
-
-.header {
-    background: rgba(255, 255, 255, 0.1);
-    -webkit-backdrop-filter: blur(10px); /* Soporte para Safari */
-    backdrop-filter: blur(10px);
-    padding: 20px;
-    text-align: center;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    position: relative;
-}
-
-.header::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.1));
-    z-index: -1;
-}
-
-.title {
-    font-size: 2.5rem;
+    --primary-color: #4e342e; /* Brown */
+    --secondary-color: #d7ccc8; /* Light Brown */
+    --accent-color: #8d6e63; /* Darker Brown */
+    --font-family: 'Roboto', sans-serif;
+  }
+  
+  body {
     margin: 0;
-    position: relative;
-    z-index: 1;
-    color: white;
-}
-
-.main {
-    flex: 1;
-    padding: 20px;
+    font-family: var(--font-family);
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+  }
+  
+  .page {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.menu, .order, .orderType, .tableSelection, .cart, .admin {
-    background: #010101ab;
-    border-radius: 8px;
-    color: #ffffff;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     padding: 20px;
+  }
+  
+  .header {
+    text-align: center;
+    margin-bottom: 40px;
+    position: relative;
+    width: 100%;
+  }
+  
+  .searchInput {
     width: 100%;
     max-width: 600px;
-    margin-bottom: 20px;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    position: relative;
-}
-
-.menu:hover, .order:hover, .orderType:hover, .tableSelection:hover, .cart:hover, .admin:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
-}
-
-.menu::before, .order::before, .orderType::before, .tableSelection::before, .cart::before, .admin::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.1));
-    z-index: -1;
-    border-radius: 8px;
-}
-
-.subtitle {
-    font-size: 1.8rem;
-    margin-bottom: 10px;
-    position: relative;
+    padding: 10px;
+    font-size: 1.2rem;
+    border: 1px solid var(--primary-color);
+    border-radius: 5px;
+  }
+  
+  .cartIcon {
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    font-size: 50px;
+    position: fixed;
     z-index: 1;
-}
-
-.list {
-    list-style: none;
-    padding: 0;
-}
-
-.listItem {
-    margin: 10px 0;
-    position: relative;
-    padding-left: 20px;
-}
-
-.listItem::before {
-    content: '•';
+    margin-top: 1rem;
+    margin-right: 1rem;
+    background-color: var(--accent-color);
+    border-radius: 50%;
+    padding: 5px;
+  }
+  
+  .cartCount {
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    border-radius: 50%;
+    padding: 5px 10px;
+    font-size: 1rem;
     position: absolute;
-    left: 0;
-    color: #b06e40;
-    font-size: 1.5rem;
-}
-
-.form {
+    top: -10px;
+    right: -10px;
+  }
+  
+  .preview-list {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+  }
+  
+  .main {
+    width: 100%;
+    max-width: 1200px;
+  }
+  
+  .menu {
     display: flex;
     flex-direction: column;
-}
-
-.label {
-    margin-bottom: 10px;
-    position: relative;
-}
-
-.select, .input {
-    padding: 10px;
-    margin-top: 5px;
-    border: none;
-    border-radius: 5px;
-    background: #f0f0f0;
-    transition: background 0.3s ease, transform 0.3s ease;
-}
-
-.select:hover, .input:hover {
-    background: #e0e0e0;
-    transform: translateY(-2px);
-}
-
-.button {
-    background-color: #b06e40;
-    color: #ffffff;
+  }
+  
+  .category {
+    margin-bottom: 20px;
+  }
+  
+  .category-title {
+    font-size: 1.8rem;
     cursor: pointer;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    transition: background-color 0.3s, transform 0.3s;
-    position: relative;
-    overflow: hidden;
-}
-
-.button::before {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 300%;
-    height: 300%;
-    background: rgba(255, 255, 255, 0.2);
-    transition: all 0.3s;
-    border-radius: 50%;
-    transform: translate(-50%, -50%) scale(0);
-}
-
-.button:hover::before {
-    transform: translate(-50%, -50%) scale(1);
-}
-
-.button:hover {
-    background-color: #ffffff;
-    color: #121212;
-    transform: translateY(-2px);
-}
-
-.cartItem {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
-    position: relative;
-    padding: 10px;
-    border-radius: 5px;
-    background: #f0f0f0;
-    transition: background 0.3s ease, transform 0.3s ease;
-}
-
-.cartItem:hover {
-    background: #e0e0e0;
-    transform: translateY(-2px);
-}
-
-.checkoutButton {
-    background-color: #0070f3;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-    position: relative;
-    overflow: hidden;
-}
-
-.checkoutButton::before {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 300%;
-    height: 300%;
-    background: rgba(255, 255, 255, 0.2);
-    transition: all 0.3s;
-    border-radius: 50%;
-    transform: translate(-50%, -50%) scale(0);
-}
-
-.checkoutButton:hover::before {
-    transform: translate(-50%, -50%) scale(1);
-}
-
-.checkoutButton:hover {
-    background-color: #005bb5;
-    transform: translateY(-2px);
-}
-
-.footer {
-    background: rgba(255, 255, 255, 0.1);
-    -webkit-backdrop-filter: blur(10px); /* Soporte para Safari */
-    backdrop-filter: blur(10px);
-    padding: 10px;
+    margin: 0;
     text-align: center;
-    box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
-    position: relative;
-}
-
-.footer::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
+    padding: 10px;
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .category-title:hover {
+    background-color: var(--accent-color);
+  }
+  
+  .subcategory {
+    margin-left: 20px;
+    margin-bottom: 10px;
+    transition: max-height 0.3s ease, opacity 0.3s ease;
+    overflow: hidden;
+  }
+  
+  .subcategory.open {
+    max-height: 1000px; /* Arbitrary large value to ensure it expands fully */
+    opacity: 1;
+  }
+  
+  .subcategory-title {
+    font-size: 1.5rem;
+    cursor: pointer;
+    margin: 0;
+    text-align: center;
+    padding: 8px;
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .subcategory-title:hover {
+    background-color: var(--accent-color);
+  }
+  
+  .product-list {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 10px;
+  }
+  
+  .product-card {
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    padding: 20px;
+    border-radius: 10px;
     width: 100%;
-    height: 100%;
-    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.1));
-    z-index: -1;
-}
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .product-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+  }
+  
+  .product-image {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 5px;
+    margin-bottom: 10px;
+  }
+  
+  .product-name {
+    font-size: 1.2rem;
+    margin: 0;
+    text-align: center;
+  }
+  
+  .product-description {
+    font-size: 1rem;
+    margin: 10px 0;
+    text-align: center;
+  }
+  
+  .product-price {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin: 0;
+    text-align: center;
+  }
+  
+  .add-button, .remove-button {
+    background-color: var(--accent-color);
+    color: var(--secondary-color);
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .add-button:hover, .remove-button:hover {
+    background-color: darken(var(--accent-color), 10%);
+  }
+  
+  .search-results {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 40px;
+    width: 100%;
+  }
+  
+  .footer {
+    margin-top: 40px;
+    text-align: center;
+    width: 100%;
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    padding: 20px;
+    border-radius: 10px;
+  }
+  
+  @media (max-width: 768px) {
+    .product-card {
+      width: 100%;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .product-card {
+      width: 100%;
+    }
+  }
