--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,4 +1,4 @@
-.body {
+.page {
     --primary-color: #4e342e; /* Brown */
     --secondary-color: #d7ccc8; /* Light Brown */
     --accent-color: #8d6e63; /* Darker Brown */
