--- a/src/components/Nav/navBar.module.css
+++ b/src/components/Nav/navBar.module.css
@@ -19,7 +19,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: url('../../assets/banner.jpg') no-repeat center center;
+  background: url('/assets/banner.jpg') no-repeat center center;
   background-size: cover;
 }
 
