--- a/src/app/admin/AdminHome.module.css
+++ b/src/app/admin/AdminHome.module.css
@@ -18,7 +18,7 @@
     flex-direction: column;
     justify-content: space-between;
     font-family: 'Arial', sans-serif;
-    padding-top: 120px;
+    padding-top: 10px;
 }
 
 .header {
@@ -115,10 +115,161 @@
     transform: translateY(-2px);
 }
 
+.buttonDisabled {
+    background-color: #b06e40;
+    color: #ffffff;
+    cursor: not-allowed;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    transition: background-color 0.3s, transform 0.3s;
+    position: relative;
+    overflow: hidden;
+}
+.buttonDisabled::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 300%;
+    height: 300%;
+    background: rgba(255, 255, 255, 0.2);
+    transition: all 0.3s;
+    border-radius: 50%;
+    transform: translate(-50%, -50%) scale(0);
+}
+.buttonDisabled:hover::before {
+    transform: translate(-50%, -50%) scale(1);
+}
+.buttonDisabled:hover {
+    background-color: #b06e40;
+    color: #ffffff;
+    transform: translateY(-2px);
+}
+
 .footer {
     background: #333;
     color: #fff;
     padding: 10px;
     text-align: center;
     box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
+}
+
+
+.userInfoContainer {
+    background: white;
+    border-radius: 12px;
+    padding: 1.5rem;
+    margin: 2rem;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+    border: 1px solid #e2e8f0;
+}
+
+.userHeader {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 1.5rem;
+    padding-bottom: 1rem;
+    border-bottom: 2px solid #f1f5f9;
+}
+.signOutButton {
+    display: flex;
+    align-items: center;
+    padding: 0.5rem 1rem;
+    background-color: #e53e3e32;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+}
+
+.signOutButton:hover {
+    background-color: #c53030;
+}
+
+.signOutIcon {
+    margin-right: 0.5rem;
+}
+.userAvatar{
+    display: flex;
+    flex-direction: row;
+    align-self: center;
+}
+.userIcon {
+    font-size: 1.5rem;
+    color: #3b82f6;
+    margin-right: 0.75rem;
+}
+
+.userHeader h2 {
+    font-size: 1.25rem;
+    color: #1e293b;
+    font-weight: 600;
+    margin: 0;
+}
+
+.userDetails {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1.5rem;
+}
+
+.infoItem {
+    display: flex;
+    align-items: center;
+    padding: 0.75rem;
+    background: #f8fafc;
+    border-radius: 8px;
+    transition: all 0.2s ease;
+}
+
+.infoItem:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+}
+
+.icon {
+    color: #64748b;
+    margin-right: 1rem;
+    font-size: 1.2rem;
+}
+
+.label {
+    display: block;
+    font-size: 0.875rem;
+    color: #64748b;
+    margin-bottom: 0.25rem;
+}
+
+.value {
+    display: block;
+    color: #1e293b;
+    font-weight: 500;
+}
+
+.loaderContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    text-align: center;
+}
+
+.loaderContainer p {
+    margin-top: 1rem;
+    font-size: 1.25rem;
+    color: #2d3748;
+}
+
+@media (max-width: 768px) {
+    .mainAdmin {
+        padding: 1rem;
+    }
+    
+    .userDetails {
+        grid-template-columns: 1fr;
+    }
 }
